# llm-agent-playground

./: .gitignore  README.md  config.py  configuration.py  evaluator_agent.py  guardrail_agent.py  main.py  orchestration_agent.py  planner_agent.py  pyproject.toml  research_agent.py  serper_agent.py  summarize_agent.py
agent/: __init__.py
configuration/: __init__.py  configuration.py
google_adk/: planner_agent.py  research_agent.py  runner.py  summarize_agent.py
log/: logger.py
openai_agents/: evaluator_agent.py  guardrail_agent.py  planner_agent.py  research_agent.py  summarize_agent.py
